<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cadetblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="20dp"
        android:textColor="@color/chartreuse"
        android:textStyle="italic|bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="30dp"
        android:padding="40dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo1"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_marginLeft="50dp"
        android:padding="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_marginLeft="20dp"
        android:padding="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo3"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_marginLeft="50dp"
        android:padding="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo4"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_marginLeft="50dp"
        android:padding="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo5"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:layout_marginLeft="50dp"
        android:padding="20dp"
        />
</LinearLayout>