<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cadetblue"
    >
   <FrameLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/title_h"
               android:textSize="30dp"
               android:textStyle="italic|bold"
               android:layout_marginLeft="100dp"
               android:layout_marginTop="40dp"
               android:textColor="@color/chartreuse"/>
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               >
               <ImageView
                   android:layout_width="135dp"
                   android:layout_height="120dp"
                   android:src="@drawable/hoteldann"
                   android:layout_weight="2"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="30dp"
                   android:id="@+id/icono1"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hotel1"
                   android:layout="@+id/icono1"
                   android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textColor="@color/white"
                   android:id="@+id/text_tt"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/servicio"
                   android:layout_toRightOf="@id/icono1"
                   android:layout_toEndOf="@id/text_tt"
                   android:layout_marginTop="30dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/black"
                   android:id="@+id/t1"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direc1"
                   android:layout_toRightOf="@+id/icono1"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="100dp"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   android:id="@+id/t2"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direct2"
                   android:layout_toRightOf="@id/t2"
                   android:layout_marginTop="100dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/contac1"
                   android:layout_toRightOf="@id/icono1"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="120dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"/>


           </RelativeLayout>
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               >
               <ImageView
                   android:layout_width="135dp"
                   android:layout_height="120dp"
                   android:src="@drawable/hotelsanjeronimo"
                   android:layout_weight="2"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="30dp"
                   android:id="@+id/icono2"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hotel2"
                   android:layout="@+id/icono1"
                   android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textColor="@color/white"
                   android:id="@+id/text_tt1"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/servicioj"
                   android:layout_toRightOf="@id/icono2"
                   android:layout_toEndOf="@id/text_tt1"
                   android:layout_marginTop="30dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/black"
                   android:id="@+id/t3"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direc1"
                   android:layout_toRightOf="@+id/icono2"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="135dp"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   android:id="@+id/t4"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direct3"
                   android:layout_toRightOf="@id/t4"
                   android:layout_marginTop="137dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/contac2"
                   android:layout_toRightOf="@id/icono2"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="155dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"/>


           </RelativeLayout>
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               >
               <ImageView
                   android:layout_width="135dp"
                   android:layout_height="120dp"
                   android:src="@drawable/plazuela"
                   android:layout_weight="2"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="30dp"
                   android:id="@+id/icono3"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hotel3"
                   android:layout="@+id/icono3"
                   android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textColor="@color/white"
                   android:id="@+id/text_tt2"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/serviciop"
                   android:layout_toRightOf="@id/icono3"
                   android:layout_toEndOf="@id/text_tt2"
                   android:layout_marginTop="35dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/black"
                   android:id="@+id/t5"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direc1"
                   android:layout_toRightOf="@+id/icono3"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="100dp"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   android:id="@+id/t6"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direct4"
                   android:layout_toRightOf="@id/t6"
                   android:layout_marginTop="100dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/contac1"
                   android:layout_toRightOf="@id/icono3"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="120dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"/>


           </RelativeLayout>
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               >
               <ImageView
                   android:layout_width="135dp"
                   android:layout_height="120dp"
                   android:src="@drawable/hotelboutique"
                   android:layout_weight="2"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="30dp"
                   android:id="@+id/icono4"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hotel4"
                   android:layout="@+id/icono3"
                   android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textColor="@color/white"
                   android:id="@+id/text_tt3"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/serviciob"
                   android:layout_toRightOf="@id/icono4"
                   android:layout_toEndOf="@id/text_tt3"
                   android:layout_marginTop="40dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/black"
                   android:id="@+id/t7"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direc1"
                   android:layout_toRightOf="@+id/icono4"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="100dp"
                   android:textSize="15dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   android:id="@+id/t8"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/direct5"
                   android:layout_toRightOf="@id/t8"
                   android:layout_marginTop="100dp"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/contac4"
                   android:layout_toRightOf="@id/icono4"
                   android:layout_marginLeft="@dimen/activity_vertical_margin"
                   android:layout_marginTop="120dp"
                   android:textStyle="normal"
                   android:textColor="@color/lavender"/>


           </RelativeLayout>

       </LinearLayout>
   </FrameLayout>

</ScrollView>