<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cadetblue"

    >
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turimo"
                android:textSize="30dp"
                android:textStyle="italic|bold"
                android:textColor="@color/chartreuse"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="50dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_puente"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:textSize="20dp"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white"/>
                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="200dp"
                        android:src="@drawable/puentehumilladero"
                        android:layout_marginLeft="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_puente"
                        android:textSize="15dp"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/darkviolet"
                        android:gravity="center"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_museo"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:textSize="20dp"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white"/>
                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="200dp"
                        android:src="@drawable/museomosquera"
                        android:layout_marginLeft="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_museo"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/darkviolet"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_reloj"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:textSize="20dp"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white"/>
                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="200dp"
                        android:src="@drawable/torrereloj"
                        android:layout_marginLeft="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_reloj"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/darkviolet"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_tulcan"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:textSize="20dp"
                        android:textStyle="normal|bold"
                        android:textColor="@color/white"/>
                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="200dp"
                        android:src="@drawable/morrotulcan"
                        android:layout_marginLeft="50dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_tulcan"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:textStyle="normal"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/darkviolet"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="300dp" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>