<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/cadetblue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cont_fragm">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="60dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textStyle="italic|bold"
                android:id="@+id/text3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo1"
                android:textSize="25dp"
                android:textStyle="italic|bold"
                android:textColor="@color/chartreuse"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sutitulo2"
                android:textSize="25dp"
                android:textStyle="italic|bold"
                android:textColor="@color/chartreuse"/>
            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_principal"
                android:layout_weight="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contenido"
                android:textStyle="normal"
                android:textSize="20dp"
                android:elegantTextHeight="true"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:textColor="@color/lavender"/>

        </LinearLayout>
    </FrameLayout>

    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:id="@+id/left_drawer"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/lavender"
        >    </ListView>





</android.support.v4.widget.DrawerLayout>
